# airis-workspace

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  PROJECT_INDEX.md  README.md  WORKSPACE.md  build.rs  compose.yaml  compose.yml  demo.tape  dist-workspace.toml  docker-compose.yml  docker-compose.yml.md  justfile  manifest.md  manifest.toml  package.json  package.json.md  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.cursor/rules/: REVIEW.md  STACK.md  WORKFLOW.md
.github/scripts/: discover-projects.sh
.github/workflows/: auto-merge.yml  ci.yml  ci.yml.md  deploy-app.yml  deploy.yml  publish-crates.yml  release.yml  release.yml.md  yank-bad-versions.yml
.husky/: pre-commit  pre-push
.workspace/: llm-context.md
apps/corporate-site/: Dockerfile  compose.yaml  (+1 more)
assets/: .gitkeep
docs/: AGENTS.md  CONFIG.md  DEPLOYMENT.md  PROJECT_INDEX.md  WORKSPACE.md  WORKSPACE_MCP.md  airis-commands.md  airis-init-architecture.md  commands.md  docker-compose.yml.md  manifest.md  pnpm-workspace.yaml.md
examples/: manifest.toml
hooks/: pre-commit  pre-push
scripts/: sync-npm-version.sh  sync-version.sh
src/: channel.rs  cli.rs  cli.rs-tmp  conventions.rs  dag.rs  docker_build.rs  executor.rs  import_scanner.rs  lib.rs  main.rs  manifest.rs  ownership.rs  pnpm.rs  preset.rs  remote_cache.rs  rules.rs  safe_fs.rs  test_lock.rs  version_resolver.rs  workspace.rs
templates/: justfile-global
tests/: cli_test.rs  docker_build_test.rs  tab_title_script.rs
workspace/: compose.yaml
(+254 files in other folders)
