[package]
name = "airis"
version = "0.2.0"
edition = "2024"
authors = ["Agile Technology <hello@agiletec.jp>"]
description = "Docker-first monorepo workspace manager for rapid prototyping"
homepage = "https://github.com/agiletec-inc/airis-workspace"
repository = "https://github.com/agiletec-inc/airis-workspace"
license = "MIT"
keywords = ["monorepo", "docker", "workspace", "cli", "prototyping"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "airis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
colored = "2.1"
tokio = { version = "1.40", features = ["full"] }
serde_json = "1.0"
handlebars = "6.2"
indexmap = { version = "2.7", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
